--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-query": "^3.8.2",
+    "react-query-devtools": "^2.6.3",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.0.1"
   },
